# NoVmp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml
NoVmp/: CMakeLists.txt  NoVmp.licenseheader  NoVmp.rc  NoVmp.sln  NoVmp.vcxproj  NoVmp.vcxproj.filters  demo_compiler.hpp  main.cpp  resource.h
NoVmp/emulator/: emulator.cpp  emulator.hpp  rwx_allocator.cpp  rwx_allocator.hpp
NoVmp/vmprotect/: architecture.cpp  architecture.hpp  deobfuscator.hpp  il2vtil.cpp  il2vtil.hpp  image_desc.hpp  rkey.hpp  subroutines.cpp  subroutines.hpp  vm_state.hpp  vtil_lifter.cpp  vtil_lifter.hpp
